feat(chat): implement private attachments across API ingestion and native execution